# WeKit

./: .gitignore  CONTRIBUTING.md  README.md  SCRIPT_API_DOCUMENT.md  generate_secrets_h.py  gradle.properties  settings.gradle.kts
.github/: PULL_REQUEST_TEMPLATE.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  wekit_lib.cpp
app/src/main/cpp/include/: generated_checksums.h  generated_hidden_dex.h  skCrypter.h
app/src/main/java/moe/ouom/wekit/activity/: MainActivity.kt
app/src/main/java/moe/ouom/wekit/config/: CacheConfig.java  ConfigManager.java  MmkvConfigManagerImpl.java  RuntimeConfig.java  SettingItem.kt  WeKitConf.java
app/src/main/java/moe/ouom/wekit/constants/: Constants.java  MMVersion.kt  PackageConstants.java
app/src/main/java/moe/ouom/wekit/dexkit/: DexFieldDescriptor.java  DexKitExecutor.java  DexKitFinder.java  DexKitTask.java  DexMethodDescriptor.java  TargetManager.java  (+1 more)
app/src/main/res/anim/: sheet_enter.xml  sheet_exit.xml  view_sink_fade.xml
app/src/main/res/drawable/: bg_dialog_surface.xml  ic_outline_arrow_back_ios_new_24.xml  ic_outline_arrow_forward_ios.xml
app/src/main/res/layout/: dialog_methodfinder_layout.xml  dialog_script_edit.xml  dialog_test_script.xml  module_dialog_frame.xml  module_item_category.xml  module_item_entry.xml  module_item_entry_category.xml  module_item_switch.xml  script_item.xml
app/src/main/res/values/: strings.xml  themes.xml
build-logic/convention/: build.gradle.kts
gradle/: libs.versions.toml
(+126 files in other folders)
